--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,6 +43,9 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
+      - name: Prepare modules
+        run: |
+          go mod vendor
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
