--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,13 +43,27 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
+      - uses: actions/setup-go@v4
+        with:
+          go-version: ">=1.20.0"
       - name: Prepare modules
         run: |
           go mod vendor
+          mkdir -p ./bin
+          mkdir -p ./bin/amd64
+          GOOS=linux GOARCH=amd64 make
+          mv ./bin/synology-csi-driver ./bin/amd64/
+          mkdir -p ./bin/arm64
+          GOOS=linux GOARCH=arm64 make
+          mv ./bin/synology-csi-driver ./bin/arm64/
+          mkdir -p ./bin/arm/v7
+          GOOS=linux GOARCH=arm GOARM=7 make
+          mv ./bin/synology-csi-driver ./bin/arm/v7/
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: ./Dockerfile.faster
           push: ${{ github.event_name != 'pull_request' }}
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ steps.repository.outputs.lowercase }}:cache
           cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ steps.repository.outputs.lowercase }}:cache
